examples/good/02-Logical.tms
void main () {

  boolean a = true && false; 
  boolean b = true || false;

  printBool(a);
  printBool(b);

  boolean advancedLogical = (true || false) && (true || true);

  printBool(advancedLogical);

  return;
}