examples/bad/00-BadComment.tms
/ I'm not a comment :(
void main() { return; }